<resources>
    <string name="app_name">Chat Projet</string>
    <string name="name">House Chat</string>
    <string name="About">Cette application est developpe par by M-A-L</string>
    <string name="MyChat">My Chat</string>
    <string name="welcome">Bienvenue dans  House Chat ou tu dois entrer ton numero</string>
    <string name="validate">Valider le numero  par le code que tu as recu </string>
    <string name="number">Entrez le numero </string>
    <string name="code">Entrez le code</string>
    <string name="codent">J\'ai pas recu le code ? Change mon numero</string>
    <string name="sendNumber">Envoyer</string>
    <string name="save">Sauvegarder</string>
    <string name="createprofil">Creer Un Profile</string>
    <string name="entername">Saisit ton nom </string>
    <string name="Chats">Chats</string>
    <string name="Status">Status</string>
    <string name="Calls">Appels</string>
    <string name="profile">Mon profil</string>
    <string name="updateprofil">Modifier ton profil</string>
    <string name="username">Nom d\'utilisateur</string>

</resources>